# enclave-vaults-client

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
go/: go.mod
go/vault/: client.go
rust/: Cargo.toml
rust/src/: client.rs  lib.rs
