# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "vault-client"
version = "0.1.0"
edition = "2021"
description = "Vault client with Shamir Secret Sharing for enclave-os-mini"
license = "AGPL-3.0-only"
repository = "https://github.com/Privasys/enclave-vaults-client"

[lib]
name = "vault_client"
path = "src/lib.rs"

[dependencies]
ratls-client = { git = "https://github.com/Privasys/ra-tls-clients.git", tag = "v0.2.0" }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
